@@ -1,7 +1,7 @@
 Package: tm
 Title: Text Mining Package
 Version: 0.5-9.4
-Date: 2013-08-26
+Date: 2013-08-30
 Authors@R: c(person("Ingo", "Feinerer", role = c("aut", "cre"),
                     email = "feinerer@logic.at"),
              person("Kurt", "Hornik", role = "aut"),
